--- a/EA3/proyecto004/instituto/crud/templates/marca.html
+++ b/EA3/proyecto004/instituto/crud/templates/marca.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Géneros</title>
+    <title>Marcas</title>
 </head>
 <body>
-    <h1>Géneros</h1>
+    <h1>Listado de marcas</h1>
     <br>
     <table>
-{% for genero in generos %}
+{% for marca in marcas %}
         <tr>
-            <td>{{ genero.id_genero }}</td>
-            <td>{{ genero.nombre | capfirst }}</td>
+            <td>{{ marca.id_marca }}</td>
+            <td>{{ marca.nombre | capfirst }}</td>
         </tr>      
         
 {% endfor %}
