--- a/EA3/proyecto004/instituto/crud/templates/genero.html
+++ b/EA3/proyecto004/instituto/crud/templates/genero.html
@@ -1,22 +1,20 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Géneros</title>
-</head>
-<body>
-    <h1>Géneros</h1>
-    <br>
-    <table>
-{% for genero in generos %}
-        <tr>
-            <td>{{ genero.id_genero }}</td>
-            <td>{{ genero.nombre | capfirst }}</td>
-        </tr>      
-        
-{% endfor %}
-    </table>
-</body>
-</html>
+{# permite dejar un comentario  #}
+{% extends "plantillaBase.html" %}
+
+{% block titulo %} Género {% endblock %}
+{% block mensaje %} {% endblock %}
+{% block contenido %} 
+
+{% endblock %}
+{% block listado %} 
+
+        <table>
+    {% for genero in generos %}
+            <tr>
+                <td>{{ genero.id_genero }}</td>
+                <td>{{ genero.nombre | capfirst }}</td>
+            </tr>      
+            
+    {% endfor %}
+        </table>
+{% endblock %}
