--- a/EA3/proyecto004/instituto/crud/templates/plantillaBase.html
+++ b/EA3/proyecto004/instituto/crud/templates/plantillaBase.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
-    <title>Géneros</title>
+    <title>{% block tituloPestana %} {% endblock %}</title>
 </head>
 <body>
     <div class="container">
@@ -31,26 +31,25 @@
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                      Administración
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Género</a></li>
+                      <li><a class="dropdown-item" href="#">Marca</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">Categoría</a></li>
                     </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                  </li>                 
+                </ul>                
               </div>
             </div>
-        </nav>
+        </nav>        
     </div>
+    <div class="container">
+        {% block titulo %} {% endblock %}
+        {% block mensaje %} {% endblock %}
+        {% block contenido %} {% endblock %}
+        {% block listado %} {% endblock %}
+    </div>    
 </body>
 </html>
