--- a/EA3/proyecto004/instituto/crud/templates/genero.html
+++ b/EA3/proyecto004/instituto/crud/templates/genero.html
@@ -1,14 +1,37 @@
 {# permite dejar un comentario  #}
 {% extends "plantillaBase.html" %}
-
+{% block tituloPestana %} Admin. Género{% endblock %}
 {% block titulo %} Género {% endblock %}
 {% block mensaje %} {% endblock %}
 {% block contenido %} 
-
+    <form method="POST" action="{% url 'genero' %}">
+        <div class="row">
+            <div class="col-2 offset-2">Id</div>
+            <div class="col-5"><input type="text" name="id" class="form-control"></div>
+        </div>
+        <div class="row">
+            <div class="col-2 offset-2">Nombre</div>
+            <div class="col-5"><input type="text" name="nombre" class="form-control"></div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-2 offset-2">Opciones</div>
+            <div class="col-5">
+                <input type="submit" value="Grabar" class="btn btn-danger">    
+                <input type="submit" value="Listar" class="btn btn-success">    
+                <input type="submit" value="Buscar" class="btn btn-warning">    
+                <input type="submit" value="Eliminar" class="btn btn-primary">    
+            </div>
+        </div>
+    </form>
 {% endblock %}
 {% block listado %} 
 
-        <table>
+        <table class="table table-reponsive table-striped table-bordered mt-3">
+            <tr>
+                <th>Id</th>
+                <th>Nombre</th>
+            </tr>
     {% for genero in generos %}
             <tr>
                 <td>{{ genero.id_genero }}</td>
