--- a/EA3/proyecto004/instituto/crud/templates/plantillaBase.html
+++ b/EA3/proyecto004/instituto/crud/templates/plantillaBase.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -15,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-black">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="icono.png" alt="No disponible" width="20%" height="20%">
+                <img src="{% static 'Images/icono.png' %}" alt="No disponible" width="20%" height="20%">
                 PC-Ntbk
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +47,7 @@
         </nav>        
     </div>
     <div class="container">
-        {% block titulo %} {% endblock %}
+        <h1 class="text-center mt-5 mb-3">{% block titulo %} {% endblock %}</h1>
         {% block mensaje %} {% endblock %}
         {% block contenido %} {% endblock %}
         {% block listado %} {% endblock %}
