--- a/EA3/proyecto004/instituto/crud/templates/genero.html
+++ b/EA3/proyecto004/instituto/crud/templates/genero.html
@@ -5,6 +5,7 @@
 {% block mensaje %} {% endblock %}
 {% block contenido %} 
     <form method="POST" action="{% url 'genero' %}">
+        {% csrf_token %}
         <div class="row">
             <div class="col-2 offset-2">Id</div>
             <div class="col-5"><input type="text" name="id" class="form-control"></div>
@@ -17,10 +18,10 @@
         <div class="row">
             <div class="col-2 offset-2">Opciones</div>
             <div class="col-5">
-                <input type="submit" value="Grabar" class="btn btn-danger">    
-                <input type="submit" value="Listar" class="btn btn-success">    
-                <input type="submit" value="Buscar" class="btn btn-warning">    
-                <input type="submit" value="Eliminar" class="btn btn-primary">    
+                <input type="submit" name="Grabar" value="Grabar" class="btn btn-danger">    
+                <input type="submit" name="Listar" value="Listar" class="btn btn-success">    
+                <input type="submit" name="Buscar" value="Buscar" class="btn btn-warning">    
+                <input type="submit" name="Eliminar" value="Eliminar" class="btn btn-primary">    
             </div>
         </div>
     </form>
@@ -32,7 +33,7 @@
                 <th>Id</th>
                 <th>Nombre</th>
             </tr>
-    {% for genero in generos %}
+    {% for genero in listado %}
             <tr>
                 <td>{{ genero.id_genero }}</td>
                 <td>{{ genero.nombre | capfirst }}</td>
