--- a/EA3/proyecto004/instituto/crud/templates/genero.html
+++ b/EA3/proyecto004/instituto/crud/templates/genero.html
@@ -8,11 +8,11 @@
         {% csrf_token %}
         <div class="row">
             <div class="col-2 offset-2">Id</div>
-            <div class="col-5"><input type="text" name="id" class="form-control"></div>
+            <div class="col-5"><input type="text" name="id" class="form-control" value="{{ item.id_genero }}"></div>
         </div>
         <div class="row">
             <div class="col-2 offset-2">Nombre</div>
-            <div class="col-5"><input type="text" name="nombre" class="form-control"></div>
+            <div class="col-5"><input type="text" name="nombre" class="form-control" value="{{ item.nombre }}"></div>
         </div>
         <br>
         <div class="row">
