--- a/EA3/proyecto004/instituto/crud/templates/genero.html
+++ b/EA3/proyecto004/instituto/crud/templates/genero.html
@@ -49,8 +49,8 @@
                 </tr>
         {% for genero in listado %}
                 <tr>
-                    <td>{{ genero.id_genero }}</td>
-                    <td>{{ genero.nombre | capfirst }}</td>
+                    <td>{{ fila.id_genero }}</td>
+                    <td>{{ fila.nombre | capfirst }}</td>
                 </tr>      
                 
         {% endfor %}
