--- a/EA3/proyecto004/instituto/crud/templates/plantillaBase.html
+++ b/EA3/proyecto004/instituto/crud/templates/plantillaBase.html
@@ -35,8 +35,8 @@
                       Administración
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Género</a></li>
-                      <li><a class="dropdown-item" href="#">Marca</a></li>
+                      <li><a class="dropdown-item" href="{% url 'genero' %}">Género</a></li>
+                      <li><a class="dropdown-item" href="{% url 'marca' %}">Marca</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="#">Categoría</a></li>
                     </ul>
