--- a/EA3/proyecto004/instituto/crud/templates/marca.html
+++ b/EA3/proyecto004/instituto/crud/templates/marca.html
@@ -1,22 +1,59 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marcas</title>
-</head>
-<body>
-    <h1>Listado de marcas</h1>
-    <br>
-    <table>
-{% for marca in marcas %}
-        <tr>
-            <td>{{ marca.id_marca }}</td>
-            <td>{{ marca.nombre | capfirst }}</td>
-        </tr>      
-        
-{% endfor %}
-    </table>
-</body>
-</html>
+{# permite dejar un comentario  #}
+{% extends "plantillaBase.html" %}
+{% block tituloPestana %} Admin. Marca{% endblock %}
+{% block titulo %} Marca {% endblock %}
+{% block mensaje %} 
+    {% if error %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{ error }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endif %}
+    {% if exito %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {{ exito }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endif %}
+
+{% endblock %}
+{% block contenido %} 
+    <form method="POST" action="{% url 'marca' %}">
+        {% csrf_token %}
+        <div class="row">
+            <div class="col-2 offset-2">Id</div>
+            <div class="col-5"><input type="text" name="id" class="form-control" value="{{ item.id_marca }}"></div>
+        </div>
+        <div class="row">
+            <div class="col-2 offset-2">Nombre</div>
+            <div class="col-5"><input type="text" name="nombre" class="form-control" value="{{ item.nombre }}"></div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-2 offset-2">Opciones</div>
+            <div class="col-5">
+                <input type="submit" name="Grabar" value="Grabar" class="btn btn-danger">    
+                <input type="submit" name="Listar" value="Listar" class="btn btn-success">    
+                <input type="submit" name="Buscar" value="Buscar" class="btn btn-warning">    
+                <input type="submit" name="Eliminar" value="Eliminar" class="btn btn-primary">    
+            </div>
+        </div>
+    </form>
+{% endblock %}
+{% block listado %} 
+    {% if listado %}
+            <table class="table table-reponsive table-striped table-bordered mt-3">
+                <tr>
+                    <th>Id</th>
+                    <th>Nombre</th>
+                </tr>
+        {% for fila in listado %}
+                <tr>
+                    <td>{{ fila.id_marca }}</td>
+                    <td>{{ fila.nombre | capfirst }}</td>
+                </tr>      
+                
+        {% endfor %}
+            </table>
+    {% endif %}
+{% endblock %}
