--- a/EA3/proyecto004/instituto/crud/templates/plantillaBase.html
+++ b/EA3/proyecto004/instituto/crud/templates/plantillaBase.html
@@ -38,7 +38,7 @@
                       <li><a class="dropdown-item" href="{% url 'genero' %}">Género</a></li>
                       <li><a class="dropdown-item" href="{% url 'marca' %}">Marca</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Categoría</a></li>
+                      <li><a class="dropdown-item" href="{% url 'categoria' %}">Categoría</a></li>
                     </ul>
                   </li>                 
                 </ul>                
