--- a/EA3/proyecto004/instituto/templates/registration/login.html
+++ b/EA3/proyecto004/instituto/templates/registration/login.html
@@ -1,3 +1,8 @@
+{% extends "plantillaBase.html" %}
+
+{% block contenido %}
+<form action='{% url 'login' %}' method="POST">
+{% csrf_token %}
 <center>
     <table>
     {{ form.as_table }}
@@ -6,3 +11,5 @@
         <td><input type="submit" class="btn btn-success" value="Enviar">
     </table>
 </center>
+</form> 
+{% endblock %}
